--- a/HojaPlayeras.html
+++ b/HojaPlayeras.html
@@ -17,7 +17,7 @@
         <img src="./IMG/FondoPagina.webp" class="card-img-top" alt="...">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPagina.png" alt="..."></a>
+                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPaginaNuevo.webp" alt="..."></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -69,14 +69,14 @@
         <a id="Playeras"></a>
         <section class="Playeras">
             <div class="container py-5">
-                <h4 class="CentradoTitulo1">Nuestras Playeras</h4>
+                <h2 class="CentradoTitulo1"><strong>Nuestras Playeras</strong></h2>
                 <br>
                 <div class="row">
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
                             <img src="./IMG/12.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Playeras
+                                <h5 class="card-title"><strong>Playera Color Azul Ajustada
                                 </strong></h5>
                                 <p class="card-text">$600.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
@@ -87,7 +87,7 @@
                         <div class="card mb-4">
                             <img src="./IMG/13.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Playeras</strong></h5>
+                                <h5 class="card-title"><strong>Playera Color Rojo Blanco Ajustada</strong></h5>
                                 <p class="card-text">$600.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -97,7 +97,7 @@
                         <div class="card mb-4">
                             <img src="./IMG/18.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Playeras</strong></h5>
+                                <h5 class="card-title"><strong>Playera Tropical Con Estampado Ajustada</strong></h5>
                                 <p class="card-text">$600.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -107,7 +107,7 @@
                         <div class="card mb-4">
                             <img src="./IMG/15.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Playeras</strong></h5>
+                                <h5 class="card-title"><strong>Playera Color Gris Ajustada</strong></h5>
                                 <p class="card-text">$600.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -120,7 +120,7 @@
                             <div class="card mb-4">
                                 <img src="./IMG/16.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Playeras</strong></h5>
+                                    <h5 class="card-title"><strong>Playera Color Gris Logo Ajustada</strong></h5>
                                     <p class="card-text">$600.00</p>
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
@@ -130,7 +130,7 @@
                             <div class="card mb-4">
                                 <img src="./IMG/17.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Playeras</strong></h5>
+                                    <h5 class="card-title"><strong>Playera Color Variado Ajustada</strong></h5>
                                     <p class="card-text">$600.00</p>
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
@@ -140,7 +140,7 @@
                             <div class="card mb-4">
                                 <img src="./IMG/14.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Playeras</strong></h5>
+                                    <h5 class="card-title"><strong>Playera Color Rojo Ajustada</strong></h5>
                                     <p class="card-text">$600.00</p> 
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
@@ -150,7 +150,7 @@
                             <div class="card mb-4">
                                 <img src="./IMG/DreamShaper_v7_playera_casual_para_hombre_0-_1_.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Playeras</strong></h5>
+                                    <h5 class="card-title"><strong>Playera Tipo Polo  Ajustada</strong></h5>
                                     <p class="card-text">$600.00</p>
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
