--- a/HojaSacos.html
+++ b/HojaSacos.html
@@ -17,7 +17,7 @@
         <img src="./IMG/fondoparasacos.webp" class="card-img-top" alt="...">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPagina.png" alt="..."></a>
+                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPaginaNuevo.webp" alt="..."></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -69,12 +69,12 @@
         <a id="Sacos"></a>
         <section class="Sacos">
             <div class="container py-5">
-                <h4 class="CentradoTitulo1">Nuestros Sacos</h4>
+                <h2 class="CentradoTitulo1"> <strong>Nuestros Sacos</strong></h2>
                 <br>
                 <div class="row">
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/30.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title"><strong>Sacos
                                 </strong></h5>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/31.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title"><strong>Sacos</strong></h5>
                                 <p class="card-text">$990.00</p>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/32.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title"><strong>Sacos</strong></h5>
                                 <p class="card-text">$990.00</p>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/33.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title"><strong>Sacos</strong></h5>
                                 <p class="card-text">$990.00</p>
@@ -118,7 +118,7 @@
                     <div class="row">
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/34.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>Sacos</strong></h5>
                                     <p class="card-text">$990.00</p>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/35.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>Sacos</strong></h5>
                                     <p class="card-text">$990.00</p>
@@ -138,7 +138,7 @@
                         </div>
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/36.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>Sacos</strong></h5>
                                     <p class="card-text">$990.00</p> 
@@ -148,7 +148,7 @@
                         </div>
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/37.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>Sacos</strong></h5>
                                     <p class="card-text">$990.00</p>
