--- a/HojaCamisas.html
+++ b/HojaCamisas.html
@@ -17,7 +17,7 @@
         <img src="./IMG/fondoparacamisas.webp" class="card-img-top" alt="...">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPagina.png" alt="..."></a>
+                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPaginaNuevo.webp" alt="..."></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -69,14 +69,14 @@
         <a id="Camisas"></a>
         <section class="Camisas">
             <div class="container py-5">
-                <h4 class="CentradoTitulo1">Nuestras Camisas</h4>
+                <h2 class="CentradoTitulo1"><Strong>Nuestras Camisas</Strong></h2>
                 <br>
                 <div class="row">
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/20.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Pantalón de Vestir Color Azul Marino</strong></h5>
+                                <h5 class="card-title"><strong>Camisa de Vestir Color Blanca</strong></h5>
                                 <p class="card-text">$550.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -84,9 +84,9 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/21.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Pantalón de Vestir Color Negro</strong></h5>
+                                <h5 class="card-title"><strong>Camisa de Vestir Color Negra Rosas Doradas</strong></h5>
                                 <p class="card-text">$550.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -94,9 +94,9 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/22.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Pantalón de Vestir Color Azul Porcelana</strong></h5>
+                                <h5 class="card-title"><strong>Camisa de Vestir Color Negra Rosas Rojas</strong></h5>
                                 <p class="card-text">$550.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -104,9 +104,9 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                            <img src="./IMG/23.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title"><strong>Pantalón de Vestir Color Gris Claro</strong></h5>
+                                <h5 class="card-title"><strong>Camisa de Vestir Color Gris Claro</strong></h5>
                                 <p class="card-text">$550.00</p>
                                 <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                             </div>
@@ -117,9 +117,9 @@
                     <div class="row">
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/24.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Pantalón de Vestir Color Azul Marino</strong></h5>
+                                    <h5 class="card-title"><strong>Camisa de Vestir Color Azul Marino</strong></h5>
                                     <p class="card-text">$550.00</p>
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
@@ -127,9 +127,9 @@
                         </div>
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/25.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Pantalón de Vestir Color Negro</strong></h5>
+                                    <h5 class="card-title"><strong>Camisa de Vestir Color Vino</strong></h5>
                                     <p class="card-text">$550.00</p>
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
@@ -137,9 +137,9 @@
                         </div>
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/26.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Pantalón de Vestir Color Azul Porcelana</strong></h5>
+                                    <h5 class="card-title"><strong>Camisa de Vestir Color Morado</strong></h5>
                                     <p class="card-text">$550.00</p> 
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
@@ -147,9 +147,9 @@
                         </div>
                         <div class="col-lg-3" data-aos="fade-down">
                             <div class="card mb-4">
-                                <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp" class="card-img-top" alt="...">
+                                <img src="./IMG/27.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title"><strong>Pantalón de Vestir Color Gris Claro</strong></h5>
+                                    <h5 class="card-title"><strong>Camisa de Vestir Color Vino Frio</strong></h5>
                                     <p class="card-text">$550.00</p>
                                     <a href="#" class="btn btn-outline-info">COMPRAR AHORA</a>
                                 </div>
