--- a/HojaMujer.html
+++ b/HojaMujer.html
@@ -20,7 +20,7 @@
         <img src="./IMG/3er fondo navbar.jpg" class="card-img-top" alt="...">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPagina.png" alt="..."></a>
+                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPaginaNuevo.webp" alt="..."></a>
                 <h4 class="NombrePagina">AdrianTorres</h4>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_playera_casual_para_hombre_0-_1_.webp" class="card-img-top"
+                            <img src="./IMG/40.webp" class="card-img-top"
                                 alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Playera Cuello Redondo de Manga Corta Model Core Max 3.14 </h5>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_pantalon_de_traje_para_hombre_casual_y_moderno_0-_1_.webp"
+                            <img src="./IMG/41.webp"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Pantalón De Vestir Tipo Classic Model Color Azul Fuerte</h5>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp"
+                            <img src="./IMG/42.webp"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Saco de Traje Gris Casual Estilo Old con Chaleco Color Vino </h5>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp"
+                            <img src="./IMG/43.webp"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Camisa Manga Larga Azul Pastel Bordado Estilo Vaquero de Flores</h5>
@@ -128,7 +128,7 @@
                 <div class="row">
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_playera_casual_para_hombre_0-_1_.webp" class="card-img-top"
+                            <img src="./IMG/44.webp" class="card-img-top"
                                 alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Playera Cuello Redondo de Manga Corta Model Core Max 3.14 </h5>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_pantalon_de_traje_para_hombre_casual_y_moderno_0-_1_.webp"
+                            <img src="./IMG/45.webp"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Pantalón De Vestir Tipo Classic Model Color Azul Fuerte</h5>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_chamarra_de_hombre_casual_y_moderna_objeto_0-_2_-_1_.webp"
+                            <img src="./IMG/46.webp"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Saco de Traje Gris Casual Estilo Old con Chaleco Color Vino </h5>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="col-lg-3" data-aos="fade-down">
                         <div class="card mb-4">
-                            <img src="./IMG/DreamShaper_v7_camisa_de_traje_para_hombre_casual_y_moderno_co_0-_1_.webp"
+                            <img src="./IMG/47.webp"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-titles">Camisa Manga Larga Azul Pastel Bordado Estilo Vaquero de Flores</h5>
