--- a/HojaPantalones.html
+++ b/HojaPantalones.html
@@ -17,7 +17,7 @@
         <img src="./IMG/fondoparapantalones.webp" class="card-img-top" alt="...">
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPagina.png" alt="..."></a>
+                <a class="navbar-brand" href="./index.html"><img class="logo" src="./IMG/LogoPaginaNuevo.webp" alt="..."></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
         <a id="Pantalones"></a>
         <section class="Pantalones">
             <div class="container py-5">
-                <h4 class="CentradoTitulo1">Nuestros Pantalones</h4>
+                <h2 class="CentradoTitulo1"><strong>Nuestros Pantalones</strong></h2>
                 <br>
                 <div class="row">
                     <div class="col-lg-3" data-aos="fade-down">
