--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
     </p>
     <br>
     © 2023 Copyright: AdrianTorres
-    <a href="politicas.html">
+    <a href="./politicas.html">
         <p style="color:rgb(0, 0, 0)">Politicas y Terminos de Privacidad y de Condiciones</p>
 </footer>
-<script src="./js/jquery-3.7.1.min.js"></script>
-<script src="./js/whatsapp-chat-support.js"></script>
+<script src="./JS/jquery-3.7.1.min.js"></script>
+<script src="./JS/whatsapp-chat-support.js"></script>
 <script>
     $('#button-w').whatsappChatSupport({
         defaultMsg: '',
